fix: align Blast and Newsletter cards in News page

--- a/src/pages/News/News.scss
+++ b/src/pages/News/News.scss
@@ -70,7 +70,8 @@
     background: $white;
   }
 
-  .card-blast {
+  .card-blast,
+  .card-newsletter {
     margin: 3rem 0;
     width: 100%;
   }
